# my-xmonad

./: .gitignore  CHANGELOG.md  LICENSE  README.org  build  cabal.project  dashboard  host-specific.sh  my-xmonad.cabal
my-taffybar/: Main.hs
my-xmonad/: Main.hs  XMonadConfig.hs  xmonad.hs
my-xmonad/XMonadConfig/: Bind.hs  Common.hs  Hook.hs  Input.hs  XConfig.hs
